Anpassungen Ansicht Mobile

--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ body{
     color: white;
     font-size: 15px;
     line-height: 1.9;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 .text a {
@@ -290,6 +290,24 @@ transform: translateY(-5px);
 .scroll-down i:hover{
     transform: translateY(-5px);
 }
+.vertical::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+ 
+.vertical::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 10px black; 
+    border-radius: 10px;
+  }
+   
+.vertical::-webkit-scrollbar-thumb {
+    background: black; 
+    border-radius: 5px;
+  }
+  
+.vertical::-webkit-scrollbar-thumb:hover {
+    background: #7AE058; 
+  }
 
 @media (max-width: 1535px){
     header{
@@ -366,24 +384,7 @@ transform: translateY(-5px);
 }
 
 
-.vertical::-webkit-scrollbar {
-    width: 10px;
-  }
-  
- 
-.vertical::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 10px black; 
-    border-radius: 10px;
-  }
-   
-.vertical::-webkit-scrollbar-thumb {
-    background: black; 
-    border-radius: 5px;
-  }
-  
-.vertical::-webkit-scrollbar-thumb:hover {
-    background: #7AE058; 
-  }
+
 
 @media (max-width: 990px){
     #menu-icon{
@@ -421,6 +422,67 @@ transform: translateY(-5px);
     .logo-img img{
         width: 100%;
         height: auto;
+        margin-top: -40px;
+        margin-bottom: 10px;
+    }
 
+    .navlist{
+        position: absolute;
+        top: 100%;
+        right: -100%;
+        width: 200px;
+        height: 60vh;
+        background: #7AE058;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        padding: 50px 20px;
+        transition: all .55s ease;
+    }
+    .navlist a{
+        margin-left: 0;
+        display: block;
+        margin: 7px 0;
+    }
+
+    .navlist.open{
+        right: 0
+
+    }
+    .text h1{
+        font-size: 35px;
+        margin: 0 0 15px;
+
+    }
+
+    .text h4 {
+        margin-bottom: 2px;
+        margin-top: 0px;
+    }
+
+    .text h5 {
+        margin-bottom: 10px;
+    }
+
+    .text p{
+        margin-bottom: 10px;
+    }
+
+    .platform-img img{
+        margin-bottom: -80px;
+    }
+    
+    .about-img img{
+        margin-bottom: -80px;
+    }
+    
+    .innovation-img img{
+        margin-bottom: -80px;  
+    }
+    .contact-img img{
+        margin-bottom: -80px;  
+    }
+    .copyright-img img{
+        margin-bottom: -80px;
     }
 }
